# vidinsight

./: .env.example  .gitignore  CLAUDE.md  README.md  coverage.xml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
api/: config.py  main.py
api/data/: __init__.py  stopwords.py  themes.py
api/db/: __init__.py  database.py  models.py
api/models/: __init__.py  schemas.py
api/routers/: __init__.py  analysis.py
api/routers/analysis/: analyze.py  comments.py  history.py  pipeline.py  results.py  router.py  search.py  shared.py
api/services/: __init__.py  absa.py  hf_inference.py  insights.py  sentiment.py  summarizer.py  topics.py  youtube.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/analysis/[id]/: layout.tsx  page.tsx
src/app/analysis/[id]/charts/: page.tsx
src/app/analysis/[id]/comments/: page.tsx
src/app/analysis/[id]/topics/: page.tsx
src/components/: analysis-history.tsx  error-display.tsx  progress-indicator.tsx  results-dashboard.tsx  search-results.tsx  url-input.tsx
src/components/analysis/: ml-info-panel.tsx  progress-terminal.tsx
src/components/blocks/: empty-state.tsx  evidence-strip.tsx  sentiment-filter.tsx  summary-card.tsx
src/components/charts/: engagement-bar.tsx  sentiment-pie.tsx
src/components/layout/: sidebar.tsx
src/components/navigation/: analysis-tabs.tsx  global-nav.tsx
src/components/pages/: overview-content.tsx
src/components/results/: comment-card.tsx  results-overview.tsx  sentiment-summary.tsx  topic-ranking.tsx  topic-slide-over.tsx
src/components/ui/: alert-dialog.tsx
src/context/: analysis-context.tsx
src/hooks/: useAnalysis.ts  useAnalysisData.ts
src/lib/: api.ts
src/types/: index.ts
tests/: test_absa.py  test_database.py  test_insights.py  test_main.py  test_schemas.py  test_sentiment.py  test_topics.py  test_youtube.py
