[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidinsight"
version = "0.1.0"
description = "YouTube comment analysis tool that extracts, categorizes, and prioritizes audience feedback"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.47.0",
    "bertopic>=0.16.0",
    "torch>=2.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
