[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-comment-analyzer"
version = "0.1.0"
description = "YouTube comment analysis tool that extracts, categorizes, and prioritizes audience feedback"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.0.0",
    "huggingface-hub>=0.36.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.47.0",
    "bertopic>=0.16.0",
    "torch>=2.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from within except
    "B905",   # zip() without strict (not always needed)
    "B007",   # loop control variable not used (often intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.coverage.run]
source = ["api"]
branch = true
omit = [
    "api/__init__.py",
    "api/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if ML_AVAILABLE:",
    "if not self._ml_available:",
    "except ImportError:",
]
fail_under = 65
